// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/DateSeparator should render date with timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T20:15:13.000Z}
  enableTimezone={true}
  timeZone="Australia/Sydney"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          timeZone="Australia/Sydney"
          value={2018-01-12T20:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          Sat, Jan 13, 2018
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone 1`] = `
<DateSeparator
  date={2018-01-12T12:15:13.000Z}
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          value={2018-01-12T12:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          Fri, Jan 12, 2018
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;

exports[`components/post_view/DateSeparator should render date without timezone enabled 1`] = `
<DateSeparator
  date={2018-01-12T12:15:13.000Z}
  enableTimezone={false}
  timeZone="Australia/Sydney"
>
  <BasicSeparator>
    <div
      className="Separator BasicSeparator"
    >
      <hr
        className="separator__hr"
      />
      <div
        className="separator__text"
      >
        <RecentDate
          day="2-digit"
          month="short"
          value={2018-01-12T12:15:13.000Z}
          weekday="short"
          year="numeric"
        >
          Fri, Jan 12, 2018
        </RecentDate>
      </div>
    </div>
  </BasicSeparator>
</DateSeparator>
`;
